chore: minor changes